[package]
name = "extauthz-mismatch"
version = "0.1.0"
authors = ["jbaumont <jeremy.baumont@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.1.4"
wasm-bindgen = "0.2.74"
log = "0.4.14"
